# slacker2

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2023_02_10_0937-da621f4fdb32_create_initial_tables.py
scripts/ci/: check-bandit.sh  check-formatting.sh  check-types.sh  run-tests.sh
slacker/: data_broker.py  model.py  user_presence_cache.py  user_presence_provider.py
slacker/actions/: assign_review.py
slacker/bot/: __init__.py  __main__.py  acknowledge_listener.py  logging_listener.py  message_listener.py  review_listener.py  user_presence_cache.py
slacker/github/: __init__.py
slacker/model/: __init__.py  channel.py  user.py  user_channel_config.py
slacker/webapp/: __init__.py  routes.py
tests/: conftest.py  test_user_presence_cache.py
tests/actions/: conftest.py  test_assign_review.py
tests/bot/: conftest.py  test_app_home_content.py  test_app_home_events.py  test_block_action_events.py  test_bot.py  test_message_events.py  test_slashcommand_events.py  test_view_submission_events.py
tests/fixtures/: __init__.py  github.py
tests/github/: conftest.py  test_all.py
tests/webapp/: test_home.py
