[tool.poetry]
name = "slacker"
version = "2.0.0"
description = "Slack bot for managing PR reviews"
authors = ["Nigel Williams <nigel.williams@marketplacer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.19.5"
flask = "^2.2.2"
pygithub = "^1.57"
sqlalchemy = "^2.0.0rc2"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"
python-dotenv = "^0.21.0"
coverage = "^7.2.2"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    # __main__ is special and the code is run at import time, so
    # executing it under pytest is a PITA
    "**/__main__.py"
    ]

[tool.coverage.report]
